<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ik_test_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tommaso@todo.todo">tommaso</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_kinematics</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>kdl_kinematics</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
