<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kdl_kinematics</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tommaso@todo.todo">tommaso</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>random_numbers</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_kinematics</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>generate_parameter_library</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>moveit_ros_planning</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>random_numbers</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>tf2_kdl</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>generate_parameter_library</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/kdl_kinematics_description.xml"/>
  </export>
</package>
